Adjusted site offline

--- a/index.html
+++ b/index.html
@@ -2,48 +2,19 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="path/to/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GVX Investiments - Site Offline</title>
     <!-- Add your CSS styles or link to an external stylesheet if needed -->
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: #f8f9fe;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            text-align: center;
-        }
-
-        .logo {
-            width: 100px; /* Adjust the logo size as needed */
-            height: auto;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            color: #3d5170;
-        }
-
-        p {
-            color: #8798ad;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container">
         <!-- Add your logo or an image here -->
-        <img src="path/to/your/logo.png" alt="Logo" class="logo">
+        <img src="icon.png" alt="Logo" class="logo">
         <h1>Ops! O site está fora do ar.</h1>
-        <p>Estamos trabalhando para resolver o problema. Tente novamente mais tarde.</p>
+        <p>Estamos trabalhando em atualizações. Tente novamente mais tarde.</p>
     </div>
 </body>
 
