--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <img src="icon.png" alt="Logo" class="logo">
         <h1>Ops! O site está fora do ar.</h1>
         <p>Estamos trabalhando em atualizações. Tente novamente mais tarde.</p>
+        <p id="countdown-text">Expectativa de retorno do site: </p>
+        <div id="countdown"></div>
     </div>
 </body>
-
+<script src="script.js"></script>
 </html>
